<resources>
    <string name="app_name">MusicStreamingService</string>
    <string name="artist_name">Artist Name</string>
    <string name="song_title">Song Title</string>
    <string name="custom_request">Custom Request</string>
    <string name="request">REQUEST</string>
    <string name="artists">Artists</string>
    <string name="instructions">Instructions</string>
    <string name="credits">Credits</string>
    <string name="settings">Settings</string>
    <string name="play_now">Play Now</string>
    <string name="download">Download</string>
    <string name="title_activity_credits">CreditsActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back">Back</string>
    <string name="credits_header">Credits</string>
    <string name="aueb_2020">AUEB Distributed Systems Project 2020</string>
    <string name="collaborators">Collaborators :</string>
    <string name="petros_papatheodorou">Petros Papatheodorou - 3170133</string>
    <string name="elena_mina">Eleni Mina - 3170108</string>
    <string name="eleni_saxoni">Eleni Saxoni - 3160270</string>
    <string name="ilias_manginas">Ilias Manginas - 3170096</string>
    <string name="connect_to_server">Connect to server</string>
    <string name="notifications_test">Notifications Test</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MusicStreamingService</string>
    <string name="nav_header_subtitle">Distributed Systems (AUEB) 2020</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="connect_to_broker">Connect to broker</string>
    <string name="connect">Connect</string>
    <string name="ip_port">ip@port</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_text">Before operating the application insert the Broker\'s IP address
        and port number in the field appearing in \"Settings\" screen. </string>
    <string name="artists_text">Choose an Artist from the list presented to you, then you will see available songs for the selected artist.</string>
    <string name="custom_req_text">To find quickly a specific song insert the astist\'s name and the song\'s title in the appropriate fields. You can choose to play the song immediately or download it to your device.</string>
    <string name="songs">Songs</string>
    <string name="button">Button</string>
    <string name="downloadIcon">downloadIcon</string>
    <string name="SongsMsg">Click on a title to listen to a song, or click on the icon to the right to download it.</string>
    <string name="ArtistMsg">Pick an artist to see their available songs.</string>
</resources>
