<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.InstructionsFragment">

    <TextView
        android:id="@+id/Instructions_title"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/instructions"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:gravity="start"
        android:text="@string/settings"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/settings_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:text="@string/settings_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/artists_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="37dp"
        android:gravity="start"
        android:text="@string/artists"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/artists_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="37dp"
        android:gravity="center_horizontal"
        android:text="@string/artists_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/custom_req_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:gravity="start"
        android:text="@string/custom_request"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/custom_req_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/custom_req_text"
        android:textSize="18sp" />

</LinearLayout>