<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dsproject.musicstreamingservice.ui.CustomRequestActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/artist_input_field"
        android:layout_width="350dp"
        android:layout_height="63dp"
        android:layout_marginTop="87dp"
        android:layout_marginBottom="414dp"
        app:layout_constraintBottom_toTopOf="@+id/Req"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/artist_name"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/song_input_field"
        android:layout_width="350dp"
        android:layout_height="63dp"
        android:layout_marginTop="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/song_title"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Req"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="119dp"
        android:text="@string/request"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_input_field"
        app:layout_constraintVertical_bias="0.866" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="132dp"
        android:layout_height="34dp"
        android:layout_centerHorizontal="false"
        android:layout_marginEnd="200dp"
        android:checked="false"

        android:text="@string/play_now"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textOff="@string/play_now"
        android:textOn="@string/download"
        app:layout_constraintBottom_toTopOf="@+id/Req"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_input_field"
        app:layout_constraintVertical_bias="0.402" />

</androidx.constraintlayout.widget.ConstraintLayout>